# basic-compiler

./: BUILD.md  EXAMPLES.md  Makefile  Makefile.dev  README.md  Taskfile.yaml  basic-compiler.cabal  basic.cf  build.sh  runtime.c  stack.yaml
.github/workflows/: build-and-test.yml
src/: CodeGen.hs  Doc.txt  LLVM.hs  LexBasic.x  Main.hs  ParBasic.y
test/: conditions.basic  factorial.basic  fibonacci.basic  loops.basic  test_prog.basic
