name:                basic-compiler
version:             0.1.0.0
synopsis:            BASIC to LLVM compiler
description:         Compiler for classic BASIC language targeting LLVM
license:             MIT
license-file:        LICENSE
author:              Anton Feldmann
maintainer:          anton@example.com
category:            Compilers
build-type:          Simple
cabal-version:       >=1.10

executable basic
  main-is:             Main.hs
  other-modules:       CodeGen
                     , LLVM
                     , AbsBasic
                     , LexBasic
                     , ParBasic
                     , ErrM
  build-depends:       base >= 4.7 && < 5
                     , llvm-hs-pure >= 9.0
                     , llvm-hs >= 9.0
                     , bytestring
                     , text
                     , mtl
                     , containers
                     , array
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -O2
